Fix layout on Firefox

--- a/Public/stylesheets/decor.css
+++ b/Public/stylesheets/decor.css
@@ -121,7 +121,7 @@ body {
 }
 
 #header > * > * {
-    margin: 12px;
+    margin: 10px 7px;
     font-size:29px
 }
 
